# LetsMove2014

./: README.md
but_pr2_greeter/: CMakeLists.txt  package.xml  setup.py
but_pr2_greeter/launch/: greeter.launch  greeter_common.launch  greeter_people.launch
but_pr2_greeter/src/: face_detector.py  fake_face_detector.py  greeter.py  people_to_point.py
