<?xml version="1.0"?>
<package>
  <name>but_pr2_greeter</name>
  <version>0.0.1</version>
  <description>The but_pr2_greeter package</description>

  <maintainer email="imaterna@fit.vutbr.cz">Zdeněk Materna</maintainer>

  <license>LGPL</license>

  <author email="xkapin01@stud.fit.vutbr.cz">Michal Kapinus</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roslint</build_depend>
  
  <run_depend>geometry_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>tf</run_depend>

</package>
